fix styling to display properly on mobile

--- a/styles.css
+++ b/styles.css
@@ -3,19 +3,20 @@ body {
     color: white;
 }
 .headshot img {
-   width: 400px;
-   height: 400px;
+   width: 200px;
+   height: 200px;
    border-radius: 50%;
 }
 body .body-container .body-column, .body-block {
-    margin: 60px 100px 60px;
-    padding: 30px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 15px;
     border-radius: 4px;
     background: black;
     box-shadow: 2px 2px 2px yellow;
 }
 .gallery {
-    max-width: 400px;
+    max-width: 200px;
     max-height: 390px;
 }
 @media (min-width: 768px) {
@@ -24,10 +25,21 @@ body .body-container .body-column, .body-block {
         justify-content: space-between;
     }
     body .body-container .body-column {
+        margin: 60px 90px 60px;
+        padding: 30px;
         flex-basis: 44%;
     }
     body .body-block {
         flex-basis: 90%;
+    }
+    .headshot img {
+        width: 400px;
+        height: 400px;
+        border-radius: 50%;
+    }
+    .gallery {
+        max-width: 400px;
+        max-height: 390px;
     }
 }
 
@@ -71,7 +83,7 @@ nav .navigation-container ul li a {
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 1rem;
+  font-size: .75rem;
   font-style: italic;
   color: white;
   padding: 10px 5px;
@@ -113,8 +125,8 @@ footer .footer-container img {
     max-width: 200px;
 }
 footer .footer-container .footer-column {
-    margin: 0 15px 60px;
-    padding: 30px;
+    margin: 0 7px 7px;
+    padding: 15px;
     border-radius: 4px;
     background: black;
     box-shadow: 2px 2px 2px yellow;
@@ -128,6 +140,8 @@ footer .footer-container .footer-column ul li {
         justify-content: space-between;
     }
     footer .footer-container .footer-column {
+        margin: 0 15px 60px;
+        padding: 30px;
         flex-basis: 32%;
     }
 }
